[gd_scene load_steps=4 format=3 uid="uid://dn3w0t2raes5j"]

[ext_resource type="Theme" uid="uid://cedhnxugilj7g" path="res://UI/theme.tres" id="1_ram7y"]
[ext_resource type="Script" path="res://UI/BaseClasses/BaseSlot.gd" id="2_280ok"]
[ext_resource type="Texture2D" uid="uid://vhw2k8km47od" path="res://UI/UIAssets/Buttons/Button_Disable.png" id="3_qsbo0"]

[node name="Slot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
theme = ExtResource("1_ram7y")
script = ExtResource("2_280ok")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("3_qsbo0")
centered = false

[node name="Label" type="Label" parent="."]
z_index = 3
custom_minimum_size = Vector2(40, 20)
layout_mode = 0
offset_left = 12.0
offset_top = 6.0
offset_right = 52.0
offset_bottom = 26.0
horizontal_alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="item_display" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 4

[node name="item_amount" type="Label" parent="CenterContainer/item_display"]
layout_mode = 0
offset_left = -5.0
offset_top = 15.0
offset_right = 37.0
offset_bottom = 38.0
theme = ExtResource("1_ram7y")
horizontal_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
